fix header overflow

--- a/style.css
+++ b/style.css
@@ -8,10 +8,12 @@ header{
 }
 
 header .img-container{
-    width: 60px;
+    width: 45px;
+
 }
 header .img-container > img{
     width: 100%;
+    object-fit: cover;
 }
 
 .ms-bg-grey{
